JMS compatibility: Allow to send empty text or bytes messages